--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,7 @@
+
+@import url("./fonts.css");
+
+
 * {
   box-sizing: border-box;
 }
@@ -104,7 +108,8 @@ main {
   position: fixed;
   top: 0;
   right: 0;
-  max-width: 320px;
+  min-width:320px;
+  max-width: 420px;
   height: 100vh;
   background: #fff;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
@@ -127,6 +132,9 @@ body.cart-open main {
 .cart h2 {
   font-family: "Oswald", sans-serif;
   font-size: 22px;
+  display:flex;
+  justify-content: space-between;
+  padding: 0 10px 0 10px;
 }
 
 .close-cart-button {
@@ -134,7 +142,7 @@ body.cart-open main {
   background: transparent;
   font-size: 18px;
   cursor: pointer;
-}
+  }
 
 .cart-items {
   flex: 1;
@@ -221,8 +229,8 @@ body.cart-open main {
     right: 0;
     left: 0;
     width: 100%;
-    height: 40vh;
-    max-height: 50vh;
+    height: 90vh;
+    max-height: 90vh;
     transform: translateY(100%);
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
